--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: gray;
+    background-color: lightblue;
     font-family: 'Neucha', cursive;
 }
 
@@ -33,6 +33,12 @@ body {
 
 .absolute {
     position: absolute;
+}
+
+.timer {
+    position: absolute;
+    bottom: 140px;
+    left: 410px;
 }
 
 .tea {
