--- a/src/index.css
+++ b/src/index.css
@@ -30,14 +30,30 @@ body {
     position: absolute;
 }
 
+#shopPane {
+    top: -300px;
+    left: -450px;
+}
+
+#orderPane {
+    bottom: -300px;
+    left: -450px;
+}
+
+#ingredientsPane {
+    top: -300px;
+    right: -450px;
+}
+
 #timer {
-    bottom: 140px;
-    left: 410px;
+    bottom: -160px;
+    left: -40px;
+    width: 200px;
 }
 
 #perfect {
-    top: 164px;
-    left: 230px;
+    top: -110px;
+    left: -230px;
 }
 
 .perfect-animation {
@@ -54,8 +70,8 @@ body {
 }
 
 #customer {
-    top: 160px;
-    left: 386px;
+    top: -140px;
+    left: -80px;
 }
 
 .customer-animation {
@@ -72,33 +88,33 @@ body {
 }
 
 #tea {
-    top: 208px;
-    left: 40px;
+    top: -92px;
+    left: -410px;
 }
 
 #boba {
-    top: 360px;
-    left: 56px;
+    top: 60px;
+    left: -394px;
 }
 
 #redBean {
-    top: 208px;
-    left: 54px;
+    top: -92px;
+    left: -396px;
 }
 
 #jelly {
-    top: 344px;
-    left: 56px;
+    top: 44px;
+    left: -394px;
 }
 
 #whippedCream {
-    top: 132px;
-    left: 40px;
+    top: -168px;
+    left: -410px;
 }
 
 #temperature {
-    top: 120px;
-    left: 60px;
+    top: -180px;
+    left: -390px;
 }
 
 .ingredientIcons {
@@ -112,23 +128,23 @@ body {
 }
 
 #orderIcons {
-    bottom: 48px;
-    left: 200px;
+    top: 200px;
+    left: -270px;
 }
 
 #flavorIcons {
-    top: 90px;
-    right: 16px;
+    top: -210px;
+    left: 164px;
 }
 
 #toppingIcons {
-    top: 230px;
-    right: 16px;
+    top: -70px;
+    left: 164px;
 }
 
 #tempIcons {
-    bottom: 178px;
-    right: 16px;
+    top: 74px;
+    left: 160px;
 }
 
 .icon {
@@ -145,18 +161,18 @@ button {
 }
 
 #doneBtn {
-    bottom: 86px;
-    right: 154px;
+    top: 170px;
+    left: 180px;
 }
 
 #trashBtn {
-    bottom: 86px;
-    right: 28px;
+    top: 170px;
+    left: 304px;
 }
 
 #moneyCounter {
-    bottom: 10px;
-    left: 730px;
+    top: 214px;
+    left: 280px;
     font-size: 30px;
     font-family:'Courier New', Courier, monospace;
 }
