--- a/src/index.css
+++ b/src/index.css
@@ -33,16 +33,19 @@ body {
 #shopPane {
     top: -300px;
     left: -450px;
+    z-index: -2;
 }
 
 #orderPane {
     bottom: -300px;
     left: -450px;
+    z-index: 0;
 }
 
 #ingredientsPane {
     top: -300px;
     right: -450px;
+    z-index: 0;
 }
 
 #timer {
@@ -72,10 +75,11 @@ body {
 #customer {
     top: -140px;
     left: -80px;
+    z-index: -1;
 }
 
-.customer-animation {
-    animation: exit-right;
+.exit-right {
+    animation: exit-right 1.1s;
 }
 
 @keyframes exit-right {
@@ -83,7 +87,20 @@ body {
         transform: translateX(0);
     }
     to {
-        transform: translateX(200px);
+        transform: translateX(300px);
+    }
+}
+
+.enter-right {
+    animation: enter-right 1s;
+}
+
+@keyframes enter-right {
+    from {
+        transform: translateX(300px);
+    }
+    to {
+        transform: translateX(0);
     }
 }
 
