customer images, price text that pops up when you finish a tea

--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,14 @@ body {
 
 #perfect {
     top: -110px;
-    left: -230px;
+    left: -228px;
+}
+
+#priceText {
+    font-size: 42px;
+    color: cornflowerblue;
+    top: -86px;
+    left: -190px;
 }
 
 .perfect-animation {
