--- a/src/index.css
+++ b/src/index.css
@@ -255,7 +255,7 @@ button {
     display: none;
 }
 
-#gameOverBg {
+.menuBg {
     background-image: linear-gradient(rgb(206,227,255), rgb(255,212,245));
     width: 900px;
     height: 600px;
@@ -263,25 +263,69 @@ button {
     left: -450px;
 }
 
-#gameOverHeader {
+.menuHeader {
     font-size: 108px;
     white-space: nowrap;
-    left: -200px;
+}
+
+#startMenuBtns {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    top: -80px;
+    left: -260px;
+}
+
+.startMenuBtn {
+    font-size: 56px;
+    height: 90px;
+    width: 500px;
+    margin-bottom: 20px;
+}
+
+#startHeader {
     top: -300px;
+    left: -270px;
+}
+
+#tutorialHeader {
+    font-size: 80px;
+    top: -320px;
+    left: -180px;
+}
+
+#gameOverHeader {
+    top: -336px;
+    left: -200px;
 }
 
 #gameOverText {
     font-size: 48px;
     white-space: nowrap;
     left: -184px;
-    top: -120px;
+    top: -160px;
     text-align: center;
 }
 
-#restartBtn {
+#gameOverMenuBtns {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    top: 80px;
+    left: -150px;
+}
+
+.gameOverMenuBtn {
     font-size: 42px;
     width: 300px;
     height: 80px;
-    left: -146px;
-    top: 130px;
+    margin-bottom: 20px;
+}
+
+.backBtn {
+    font-size: 42px;
+    width: 300px;
+    height: 80px;
+    left: -150px;
+    top: 180px;
 }
